@@ -8,6 +8,7 @@
 #include "PlayerHandler.h"
 #include "Game/Camera.h"
 #include "Game/CameraHandler.h"
+#include "Game/GameSetup.h"
 #include "Game/GlobalUnsynced.h"
 #include "Game/SelectedUnitsHandler.h"
 #include "Game/UI/MouseHandler.h"
@@ -90,6 +91,13 @@ void CPlayer::UpdateControlledTeams()
 	}
 }
 
+void CPlayer::NotifyPlayerChanged() const
+{
+	if (gameSetup == nullptr || !gameSetup->hostDemo || IsFromDemo())
+		eventHandler.SyncedPlayerChanged(playerNum);
+
+	eventHandler.PlayerChanged(playerNum);
+}
 
 void CPlayer::StartSpectating()
 {
@@ -113,7 +121,7 @@ void CPlayer::StartSpectating()
 	}
 
 	StopControllingUnit();
-	eventHandler.PlayerChanged(playerNum);
+	NotifyPlayerChanged();
 }
 
 void CPlayer::JoinTeam(int newTeam)
@@ -136,7 +144,7 @@ void CPlayer::JoinTeam(int newTeam)
 		unitTracker.Disable();
 	}
 
-	eventHandler.PlayerChanged(playerNum);
+	NotifyPlayerChanged();
 }
 
 void CPlayer::GameFrame(int frameNum)
