@@ -32,9 +32,7 @@
 	SETUP_EVENT(GameFrame,     MANAGED_BIT)
 	SETUP_EVENT(TeamDied,      MANAGED_BIT)
 	SETUP_EVENT(TeamChanged,   MANAGED_BIT)
-	SETUP_EVENT(PlayerChanged, MANAGED_BIT | UNSYNCED_BIT)
-	SETUP_EVENT(PlayerAdded,   MANAGED_BIT | UNSYNCED_BIT)
-	SETUP_EVENT(PlayerRemoved, MANAGED_BIT | UNSYNCED_BIT)
+	SETUP_EVENT(SyncedPlayerChanged, MANAGED_BIT)
 
 	SETUP_EVENT(UnitCreated,      MANAGED_BIT)
 	SETUP_EVENT(UnitFinished,     MANAGED_BIT)
@@ -86,6 +84,10 @@
 	SETUP_EVENT(StockpileChanged, MANAGED_BIT)
 
 	// unsynced call-ins
+	SETUP_EVENT(PlayerChanged, MANAGED_BIT | UNSYNCED_BIT)
+	SETUP_EVENT(PlayerAdded,   MANAGED_BIT | UNSYNCED_BIT)
+	SETUP_EVENT(PlayerRemoved, MANAGED_BIT | UNSYNCED_BIT)
+
 	SETUP_EVENT(Save,           MANAGED_BIT | UNSYNCED_BIT)
 
 	SETUP_EVENT(UnsyncedHeightMapUpdate, MANAGED_BIT | UNSYNCED_BIT)
